# libvmod_maxminddb

./: Makefile.am  README.md  configure.ac
debian/: changelog  control  libvmod-maxminddb.install  rules
m4/: varnish.m4
src/: Makefile.am  vmod_geoip.c  vmod_geoip.vcc  vmod_maxminddb.c  vmod_maxminddb.vcc
